--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AI Express | AI Coaching, Workshops & Automation</title>
     <meta name="description" content="Transform your business with AI Express. We offer AI Coaching, Workshops, and Automation Services for business transformation.">
+    <meta name="keywords" content="AI, artificial intelligence, coaching, workshops, automation, business transformation, machine learning">
+    <meta name="author" content="AI Express">
+    <meta name="robots" content="index, follow">
+    <link rel="preload" href="/src/assets/logo.svg" as="image">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
